# lidar-pointcloud-preprocessing

./: .clang-format  .gitignore  CMakeLists.txt  Dockerfile  ENGINEERING_NOTES.md  README.md  lidar_preprocessing_plugins.xml  nodelet_plugins.xml  package.xml
config/: PreprocessingParams.cfg  lidar_preprocessing_params.yaml
include/: lidar_preprocessing_nodelet.hpp  ros_utils.h
include/lidar_preprocessing_pipeline/dtypes/: plugin_params.hpp  point_types.hpp  preprocess_context.hpp
include/lidar_preprocessing_pipeline/plugins/: gravity_align_plugin.hpp  livox_tag_filter_plugin.hpp  plugin_interface.hpp  pointcloud_deskew_plugin.hpp  radius_outlier_removal_plugin.hpp  voxel_grid_filter_plugin.hpp
include/lidar_preprocessing_pipeline/utils/: imu_integrator.hpp
launch/: lidar_preprocessing_nodelet.launch
src/: lidar_preprocessing_nodelet.cpp
src/lidar_preprocessing_pipeline/plugins/: gravity_align_plugin.cpp  livox_tag_filter_plugin.cpp  plugins_exporter.cpp  pointcloud_deskew_plugin.cpp  radius_outlier_removal_plugin.cpp  voxel_grid_filter_plugin.cpp
src/lidar_preprocessing_pipeline/utils/: imu_integrator.cpp
viz/: extract_animated.py  record_all_bags.sh
