<?xml version="1.0"?>
<package format="2">
  <name>lidar_preprocessing_pipeline</name>
  <version>0.1.0</version>
  <description>Plugin-based LiDAR point-cloud preprocessing for ROS Noetic.</description>

  <maintainer email="bigchoi3449@gmail.com">Hyunyoung Choi</maintainer>

  <license>Apache License 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- ROS Dependencies -->
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nodelet</depend>

  <!-- Additional Dependencies -->
  <depend>pluginlib</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>tf2_ros</depend>

  <export>
    <nodelet plugin="${prefix}/nodelet_plugins.xml" />
    <lidar_preprocessing_pipeline plugin="${prefix}/lidar_preprocessing_plugins.xml" />
  </export>
</package>
